// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insiderTimeline > renders a basic timeline snapshot 1`] = `
"[38;2;0;212;255mDATE[0m     [38;2;0;212;255mTYPE[0m    [38;2;0;212;255mINSIDER[0m                                        [38;2;0;212;255mSHARES[0m    [38;2;0;212;255mAMOUNT[0m
[38;2;85;85;85m────────────────────────────────────────────────────────────────────────────────[0m
[38;2;85;85;85mJan 15[0m   [38;2;0;255;136m▲ BUY[0m   [38;2;255;255;255mJohn Smith[0m                                      [38;2;255;255;255m10.0K[0m     [38;2;0;255;136m$250K[0m
[38;2;85;85;85mFeb 3[0m    [38;2;255;68;68m▼ SELL[0m  [38;2;255;255;255mJane Doe[0m                                         [38;2;255;255;255m5.0K[0m     [38;2;255;68;68m$125K[0m
[38;2;85;85;85mMar 20[0m   [38;2;0;255;136m▲ BUY[0m   [38;2;255;255;255mBob Carter[0m                                      [38;2;255;255;255m50.0K[0m     [38;2;0;255;136m$1.2M[0m
[38;2;85;85;85mApr 1[0m    [38;2;255;68;68m▼ SELL[0m  [38;2;255;255;255mAlice Wong[0m                                     [38;2;255;255;255m100.0K[0m     [38;2;255;68;68m$3.5M[0m"
`;

exports[`insiderTimeline > renders a single buy transaction 1`] = `
"[38;2;0;212;255mDATE[0m     [38;2;0;212;255mTYPE[0m    [38;2;0;212;255mINSIDER[0m                                        [38;2;0;212;255mSHARES[0m    [38;2;0;212;255mAMOUNT[0m
[38;2;85;85;85m────────────────────────────────────────────────────────────────────────────────[0m
[38;2;85;85;85mJun 1[0m    [38;2;0;255;136m▲ BUY[0m   [38;2;255;255;255mCEO Name[0m                                         [38;2;255;255;255m1.0K[0m      [38;2;0;255;136m$50K[0m"
`;

exports[`insiderTimeline > renders a single sell transaction 1`] = `
"[38;2;0;212;255mDATE[0m     [38;2;0;212;255mTYPE[0m    [38;2;0;212;255mINSIDER[0m                                        [38;2;0;212;255mSHARES[0m    [38;2;0;212;255mAMOUNT[0m
[38;2;85;85;85m────────────────────────────────────────────────────────────────────────────────[0m
[38;2;85;85;85mJun 1[0m    [38;2;255;68;68m▼ SELL[0m  [38;2;255;255;255mCFO Name[0m                                         [38;2;255;255;255m2.0K[0m      [38;2;255;68;68m$80K[0m"
`;

exports[`insiderTimeline > renders in bloomberg theme 1`] = `
"[38;2;255;140;0mDATE[0m     [38;2;255;140;0mTYPE[0m    [38;2;255;140;0mINSIDER[0m                                        [38;2;255;140;0mSHARES[0m    [38;2;255;140;0mAMOUNT[0m
[38;2;85;85;85m────────────────────────────────────────────────────────────────────────────────[0m
[38;2;85;85;85mJan 15[0m   [38;2;0;200;83m▲ BUY[0m   [38;2;255;255;255mJohn Smith[0m                                      [38;2;255;255;255m10.0K[0m     [38;2;0;200;83m$250K[0m
[38;2;85;85;85mFeb 3[0m    [38;2;255;23;68m▼ SELL[0m  [38;2;255;255;255mJane Doe[0m                                         [38;2;255;255;255m5.0K[0m     [38;2;255;23;68m$125K[0m
[38;2;85;85;85mMar 20[0m   [38;2;0;200;83m▲ BUY[0m   [38;2;255;255;255mBob Carter[0m                                      [38;2;255;255;255m50.0K[0m     [38;2;0;200;83m$1.2M[0m
[38;2;85;85;85mApr 1[0m    [38;2;255;23;68m▼ SELL[0m  [38;2;255;255;255mAlice Wong[0m                                     [38;2;255;255;255m100.0K[0m     [38;2;255;23;68m$3.5M[0m"
`;

exports[`insiderTimeline > renders in dracula theme 1`] = `
"[38;2;189;147;249mDATE[0m     [38;2;189;147;249mTYPE[0m    [38;2;189;147;249mINSIDER[0m                                        [38;2;189;147;249mSHARES[0m    [38;2;189;147;249mAMOUNT[0m
[38;2;98;114;164m────────────────────────────────────────────────────────────────────────────────[0m
[38;2;98;114;164mJan 15[0m   [38;2;80;250;123m▲ BUY[0m   [38;2;248;248;242mJohn Smith[0m                                      [38;2;248;248;242m10.0K[0m     [38;2;80;250;123m$250K[0m
[38;2;98;114;164mFeb 3[0m    [38;2;255;85;85m▼ SELL[0m  [38;2;248;248;242mJane Doe[0m                                         [38;2;248;248;242m5.0K[0m     [38;2;255;85;85m$125K[0m
[38;2;98;114;164mMar 20[0m   [38;2;80;250;123m▲ BUY[0m   [38;2;248;248;242mBob Carter[0m                                      [38;2;248;248;242m50.0K[0m     [38;2;80;250;123m$1.2M[0m
[38;2;98;114;164mApr 1[0m    [38;2;255;85;85m▼ SELL[0m  [38;2;248;248;242mAlice Wong[0m                                     [38;2;248;248;242m100.0K[0m     [38;2;255;85;85m$3.5M[0m"
`;

exports[`insiderTimeline > renders in monochrome theme 1`] = `
"[38;2;153;153;153mDATE[0m     [38;2;153;153;153mTYPE[0m    [38;2;153;153;153mINSIDER[0m                                        [38;2;153;153;153mSHARES[0m    [38;2;153;153;153mAMOUNT[0m
[38;2;68;68;68m────────────────────────────────────────────────────────────────────────────────[0m
[38;2;68;68;68mJan 15[0m   [38;2;204;204;204m▲ BUY[0m   [38;2;255;255;255mJohn Smith[0m                                      [38;2;255;255;255m10.0K[0m     [38;2;204;204;204m$250K[0m
[38;2;68;68;68mFeb 3[0m    [38;2;136;136;136m▼ SELL[0m  [38;2;255;255;255mJane Doe[0m                                         [38;2;255;255;255m5.0K[0m     [38;2;136;136;136m$125K[0m
[38;2;68;68;68mMar 20[0m   [38;2;204;204;204m▲ BUY[0m   [38;2;255;255;255mBob Carter[0m                                      [38;2;255;255;255m50.0K[0m     [38;2;204;204;204m$1.2M[0m
[38;2;68;68;68mApr 1[0m    [38;2;136;136;136m▼ SELL[0m  [38;2;255;255;255mAlice Wong[0m                                     [38;2;255;255;255m100.0K[0m     [38;2;136;136;136m$3.5M[0m"
`;

exports[`insiderTimeline > renders with narrow width 1`] = `
"[38;2;0;212;255mDATE[0m     [38;2;0;212;255mTYPE[0m    [38;2;0;212;255mINSIDER[0m                    [38;2;0;212;255mSHARES[0m    [38;2;0;212;255mAMOUNT[0m
[38;2;85;85;85m────────────────────────────────────────────────────────────[0m
[38;2;85;85;85mJan 15[0m   [38;2;0;255;136m▲ BUY[0m   [38;2;255;255;255mJohn Smith[0m                  [38;2;255;255;255m10.0K[0m     [38;2;0;255;136m$250K[0m
[38;2;85;85;85mFeb 3[0m    [38;2;255;68;68m▼ SELL[0m  [38;2;255;255;255mJane Doe[0m                     [38;2;255;255;255m5.0K[0m     [38;2;255;68;68m$125K[0m
[38;2;85;85;85mMar 20[0m   [38;2;0;255;136m▲ BUY[0m   [38;2;255;255;255mBob Carter[0m                  [38;2;255;255;255m50.0K[0m     [38;2;0;255;136m$1.2M[0m
[38;2;85;85;85mApr 1[0m    [38;2;255;68;68m▼ SELL[0m  [38;2;255;255;255mAlice Wong[0m                 [38;2;255;255;255m100.0K[0m     [38;2;255;68;68m$3.5M[0m"
`;
